--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,14 @@ nav:
   - Home: index.md
   - Day#1:
     - Introduction: 00_intro.md
+    - RFID vs NFC: 01_rfid-vs-nfc.md
+    - Puces et Lecteurs RFID: 02_puces-lecteurs-rfid.md
+    - RFID - Exemples concrets : 03_rfid-exemples.md
+    - Limites du RFID: 04_limites-rfid.md
+    - TP - MIFARE Classic 1K Hacking: 05_mifare-classic-1k-hacking.md
+
+
+
 
 theme:
   language: en
@@ -21,6 +29,7 @@ theme:
   logo: assets/images/yncrea.png
   favicon: assets/images/yncrea.png
   palette:
+    scheme: preference
     primary: amber
     accent: amber
   font:
