--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,9 +29,8 @@ theme:
   logo: assets/images/yncrea.png
   favicon: assets/images/yncrea.png
   palette:
-    scheme: preference
-    primary: amber
-    accent: amber
+    primary: cyan
+    accent: cyan
   font:
     text: Roboto
     code: Roboto Mono
