--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,10 +35,11 @@ theme:
     text: Roboto
     code: Roboto Mono
   features:
-    - tabs
-    - instant
     - navigation.instant
     - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.sections
+    - navigation.expand
   custom_dir: material
 
 markdown_extensions:
